appId: com.bubbl.mobile.dev
---
- launchApp:
    clearState: true
- assertVisible:
    text: Welcome to Bubbl
- tapOn:
    id: launch-clinician-button
- tapOn:
    id: clinician-login-email-input
- inputText: ${CLINICIAN_EMAIL}
- tapOn:
    id: clinician-login-password-input
- inputText: ${CLINICIAN_PASSWORD}
- tapOn:
    id: clinician-login-submit-button
- assertVisible:
    text: Today
- tapOn:
    id: tab-clinician-profile
- assertVisible:
    text: Sign out
- tapOn:
    id: sign-out-button
- assertVisible:
    text: Welcome to Bubbl
